[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/hud/game_hud/build_hud/building_placer.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/game_hud/build_hud/ground_check.gd" type="Script" id=2]

[node name="BuildingPlacer" type="Spatial"]
script = ExtResource( 1 )

[node name="BuildingArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 15

[node name="CollisionShape" type="CollisionShape" parent="BuildingArea"]

[node name="GroundCheck" type="Spatial" parent="BuildingArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
script = ExtResource( 2 )

[node name="pXnZ" type="RayCast" parent="BuildingArea/GroundCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1 )
enabled = true

[node name="pXpZ" type="RayCast" parent="BuildingArea/GroundCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1 )
enabled = true

[node name="nXpZ" type="RayCast" parent="BuildingArea/GroundCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1 )
enabled = true

[node name="nXnZ" type="RayCast" parent="BuildingArea/GroundCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1 )
enabled = true

[node name="RayCast" type="RayCast" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="BuildingArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="BuildingArea" to="." method="_on_body_exited"]
